--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "dependencies": {
+    "@types/assert": "^1.5.6",
     "@types/clone": "^2.1.1",
-    "@types/deep-equal": "^1.0.1",
     "@types/p5": "^1.4.1",
     "browserify": "^17.0.0",
     "clone": "^2.1.2",
-    "deep-equal": "^2.0.5",
     "p5": "^1.4.1",
     "typescript": "^4.6.2"
   }
